2008-06-23  Jürg Billeter  <j@bitron.ch>

	* vala/valacfgbuilder.vala:
	* vala/valaelementaccess.vala:
	* vala/valanullchecker.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valasignal.vala:
	* vala/valasymbolresolver.vala:
	* gobject/valaccodeassignmentbinding.vala:
	* gobject/valaccodeelementaccessbinding.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodeinvocationexpressionbinding.vala:

	Support connecting to and emitting detailed signals,
	fixes bug 536794

2008-06-23  Jürg Billeter  <j@bitron.ch>

	* vala/valaattribute.vala:
	* vala/valafield.vala:
	* vala/valainterfacewriter.vala:
	* vala/valanamedargument.vala:
	* vala/valastringliteral.vala:
	* gobject/valaccodegenerator.vala:
	* vapigen/valagidlparser.vala:

	Support [CCode (type = "Foo")] to insert appropriate casts in
	generated C Code

	* vapi/packages/gtk+-2.0/:

	Fix GtkActionEntry binding, fixes bug 526874

	* vapi/gtk+-2.0.vapi: regenerated

2008-06-23  Jürg Billeter  <j@bitron.ch>

	* vala/valagenieparser.vala:
	* vala/valanamespacereference.vala:
	* vala/valasourcefile.vala:
	* compiler/valacompiler.vala:

	Import members of the GLib namespace by default, fixes bug 539596

2008-06-23  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodedynamicpropertybinding.vala:

	Support dynamic D-Bus properties

2008-06-23  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodedynamicmethodbinding.vala:
	* gobject/valaccodedynamicsignalbinding.vala:

	Use CamelCase for dynamic D-Bus methods and signals

2008-06-23  Jaap A. Haitsma  <jaap@haitsma.org>

	* vapi/packages/gdk-2.0/gdk-2.0.metadata:
	Fix gdk_pixbuf_from_drawable and gdk_pixbuf_from_image bindings
	Fixes bug #539632
	* vapi/gdk-2.0.vapi: Regenerated

2008-06-23  Jamie McCracken  <jamiemcc@gnome.org>

	* vala/valageniescanner.vala:

	Allow arbitrary whitespace/tabs at start of line when its a line
	continuation

2008-06-23  Jamie McCracken  <jamiemcc@gnome.org>

	* vala/valagenieparser.vala:
